Lab3/par.output
Terminals which are not used

   COMMA


State 9 conflicts: 1 shift/reduce
State 12 conflicts: 1 shift/reduce


Grammar

    0 $accept: Prog $end

    1 Prog: StmtList

    2 StmtList: Stmt StmtList
    3         | /* empty */

    4 Stmt: BareStmt
    5     | Blk
    6     | error SEMI
    7     | error RC

    8 BareStmt: Decl
    9         | Asgn
   10         | IfStmt
   11         | WhlStmt
   12         | PrntStmt

   13 Blk: LC StmtList RC
   14    | LC StmtList error

   15 Decl: Typ ID SEMI
   16     | Typ ID error
   17     | Typ error SEMI

   18 Typ: INT
   19    | FLOAT

   20 Asgn: ID ASGN Expr SEMI
   21     | ID ASGN Expr error
   22     | ID ASGN error SEMI
   23     | ID Expr SEMI

   24 PrntStmt: PRINT LP Expr RP SEMI
   25         | PRINT Expr RP SEMI
   26         | PRINT LP Expr SEMI
   27         | PRINT LP RP SEMI
   28         | PRINT LP Expr RP error
   29         | PRINTF LP Expr RP SEMI
   30         | PRINTF Expr RP SEMI
   31         | PRINTF LP Expr SEMI
   32         | PRINTF LP RP SEMI
   33         | PRINTF LP Expr RP error

   34 IfStmt: IF LP Expr RP Blk
   35       | IF LP Expr RP Blk ELSE Blk
   36       | IF LP RP Blk
   37       | IF LP Expr Blk
   38       | IF LP Expr Blk ELSE Blk
   39       | IF LP Expr RP BareStmt
   40       | IF LP Expr RP BareStmt ELSE Blk
   41       | IF LP Expr RP Blk ELSE BareStmt
   42       | IF Expr RP Blk
   43       | IF Expr RP Blk ELSE Blk

   44 WhlStmt: WHILE LP Expr RP Blk
   45        | WHILE LP RP Blk
   46        | WHILE LP Expr Blk
   47        | WHILE LP Expr RP BareStmt
   48        | WHILE Expr RP Blk

   49 Expr: Expr OR Expr
   50     | Expr AND Expr
   51     | Expr EQ Expr
   52     | Expr NEQ Expr
   53     | Expr LT Expr
   54     | Expr GT Expr
   55     | Expr LEQ Expr
   56     | Expr GEQ Expr
   57     | Expr PLUS Expr
   58     | Expr MINUS Expr
   59     | Expr MUL Expr
   60     | Expr DIV Expr
   61     | Expr MOD Expr
   62     | NOT Expr
   63     | MINUS Expr
   64     | LP Expr RP
   65     | ID
   66     | ICON
   67     | FCON
   68     | SCON


Terminals, with rules where they appear

$end (0) 0
error (256) 6 7 14 16 17 21 22 28 33
INT (258) 18
FLOAT (259) 19
IF (260) 34 35 36 37 38 39 40 41 42 43
ELSE (261) 35 38 40 41 43
WHILE (262) 44 45 46 47 48
PRINT (263) 24 25 26 27 28
PRINTF (264) 29 30 31 32 33
ID (265) 15 16 20 21 22 23 65
ICON (266) 66
FCON (267) 67
SCON (268) 68
PLUS (269) 57
MINUS (270) 58 63
MUL (271) 59
DIV (272) 60
MOD (273) 61
EQ (274) 51
NEQ (275) 52
LT (276) 53
GT (277) 54
LEQ (278) 55
GEQ (279) 56
AND (280) 50
OR (281) 49
NOT (282) 62
ASGN (283) 20 21 22
SEMI (284) 6 15 17 20 22 23 24 25 26 27 29 30 31 32
COMMA (285)
LP (286) 24 26 27 28 29 31 32 33 34 35 36 37 38 39 40 41 44 45 46 47
    64
RP (287) 24 25 27 28 29 30 32 33 34 35 36 39 40 41 42 43 44 45 47 48
    64
LC (288) 13 14
RC (289) 7 13
IF_NO_ELSE (290)
UMINUS (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
Prog (38)
    on left: 1, on right: 0
StmtList (39)
    on left: 2 3, on right: 1 2 13 14
Stmt (40)
    on left: 4 5 6 7, on right: 2
BareStmt (41)
    on left: 8 9 10 11 12, on right: 4 39 40 41 47
Blk (42)
    on left: 13 14, on right: 5 34 35 36 37 38 40 41 42 43 44 45 46
    48
Decl (43)
    on left: 15 16 17, on right: 8
Typ (44)
    on left: 18 19, on right: 15 16 17
Asgn (45)
    on left: 20 21 22 23, on right: 9
PrntStmt (46)
    on left: 24 25 26 27 28 29 30 31 32 33, on right: 12
IfStmt (47)
    on left: 34 35 36 37 38 39 40 41 42 43, on right: 10
WhlStmt (48)
    on left: 44 45 46 47 48, on right: 11
Expr (49)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68, on right: 20 21 23 24 25 26 28 29 30 31 33 34 35 37 38 39
    40 41 42 43 44 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64


state 0

    0 $accept: . Prog $end

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    PRINTF  shift, and go to state 7
    ID      shift, and go to state 8
    LC      shift, and go to state 9

    $end  reduce using rule 3 (StmtList)

    Prog      go to state 10
    StmtList  go to state 11
    Stmt      go to state 12
    BareStmt  go to state 13
    Blk       go to state 14
    Decl      go to state 15
    Typ       go to state 16
    Asgn      go to state 17
    PrntStmt  go to state 18
    IfStmt    go to state 19
    WhlStmt   go to state 20


state 1

    6 Stmt: error . SEMI
    7     | error . RC

    SEMI  shift, and go to state 21
    RC    shift, and go to state 22


state 2

   18 Typ: INT .

    $default  reduce using rule 18 (Typ)


state 3

   19 Typ: FLOAT .

    $default  reduce using rule 19 (Typ)


state 4

   34 IfStmt: IF . LP Expr RP Blk
   35       | IF . LP Expr RP Blk ELSE Blk
   36       | IF . LP RP Blk
   37       | IF . LP Expr Blk
   38       | IF . LP Expr Blk ELSE Blk
   39       | IF . LP Expr RP BareStmt
   40       | IF . LP Expr RP BareStmt ELSE Blk
   41       | IF . LP Expr RP Blk ELSE BareStmt
   42       | IF . Expr RP Blk
   43       | IF . Expr RP Blk ELSE Blk

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 29

    Expr  go to state 30


state 5

   44 WhlStmt: WHILE . LP Expr RP Blk
   45        | WHILE . LP RP Blk
   46        | WHILE . LP Expr Blk
   47        | WHILE . LP Expr RP BareStmt
   48        | WHILE . Expr RP Blk

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 31

    Expr  go to state 32


state 6

   24 PrntStmt: PRINT . LP Expr RP SEMI
   25         | PRINT . Expr RP SEMI
   26         | PRINT . LP Expr SEMI
   27         | PRINT . LP RP SEMI
   28         | PRINT . LP Expr RP error

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 33

    Expr  go to state 34


state 7

   29 PrntStmt: PRINTF . LP Expr RP SEMI
   30         | PRINTF . Expr RP SEMI
   31         | PRINTF . LP Expr SEMI
   32         | PRINTF . LP RP SEMI
   33         | PRINTF . LP Expr RP error

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 35

    Expr  go to state 36


state 8

   20 Asgn: ID . ASGN Expr SEMI
   21     | ID . ASGN Expr error
   22     | ID . ASGN error SEMI
   23     | ID . Expr SEMI

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    ASGN   shift, and go to state 37
    LP     shift, and go to state 38

    Expr  go to state 39


state 9

   13 Blk: LC . StmtList RC
   14    | LC . StmtList error

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    PRINTF  shift, and go to state 7
    ID      shift, and go to state 8
    LC      shift, and go to state 9

    error  [reduce using rule 3 (StmtList)]
    RC     reduce using rule 3 (StmtList)

    StmtList  go to state 40
    Stmt      go to state 12
    BareStmt  go to state 13
    Blk       go to state 14
    Decl      go to state 15
    Typ       go to state 16
    Asgn      go to state 17
    PrntStmt  go to state 18
    IfStmt    go to state 19
    WhlStmt   go to state 20


state 10

    0 $accept: Prog . $end

    $end  shift, and go to state 41


state 11

    1 Prog: StmtList .

    $default  reduce using rule 1 (Prog)


state 12

    2 StmtList: Stmt . StmtList

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    PRINTF  shift, and go to state 7
    ID      shift, and go to state 8
    LC      shift, and go to state 9

    $end   reduce using rule 3 (StmtList)
    error  [reduce using rule 3 (StmtList)]
    RC     reduce using rule 3 (StmtList)

    StmtList  go to state 42
    Stmt      go to state 12
    BareStmt  go to state 13
    Blk       go to state 14
    Decl      go to state 15
    Typ       go to state 16
    Asgn      go to state 17
    PrntStmt  go to state 18
    IfStmt    go to state 19
    WhlStmt   go to state 20


state 13

    4 Stmt: BareStmt .

    $default  reduce using rule 4 (Stmt)


state 14

    5 Stmt: Blk .

    $default  reduce using rule 5 (Stmt)


state 15

    8 BareStmt: Decl .

    $default  reduce using rule 8 (BareStmt)


state 16

   15 Decl: Typ . ID SEMI
   16     | Typ . ID error
   17     | Typ . error SEMI

    error  shift, and go to state 43
    ID     shift, and go to state 44


state 17

    9 BareStmt: Asgn .

    $default  reduce using rule 9 (BareStmt)


state 18

   12 BareStmt: PrntStmt .

    $default  reduce using rule 12 (BareStmt)


state 19

   10 BareStmt: IfStmt .

    $default  reduce using rule 10 (BareStmt)


state 20

   11 BareStmt: WhlStmt .

    $default  reduce using rule 11 (BareStmt)


state 21

    6 Stmt: error SEMI .

    $default  reduce using rule 6 (Stmt)


state 22

    7 Stmt: error RC .

    $default  reduce using rule 7 (Stmt)


state 23

   65 Expr: ID .

    $default  reduce using rule 65 (Expr)


state 24

   66 Expr: ICON .

    $default  reduce using rule 66 (Expr)


state 25

   67 Expr: FCON .

    $default  reduce using rule 67 (Expr)


state 26

   68 Expr: SCON .

    $default  reduce using rule 68 (Expr)


state 27

   63 Expr: MINUS . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 45


state 28

   62 Expr: NOT . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 46


state 29

   34 IfStmt: IF LP . Expr RP Blk
   35       | IF LP . Expr RP Blk ELSE Blk
   36       | IF LP . RP Blk
   37       | IF LP . Expr Blk
   38       | IF LP . Expr Blk ELSE Blk
   39       | IF LP . Expr RP BareStmt
   40       | IF LP . Expr RP BareStmt ELSE Blk
   41       | IF LP . Expr RP Blk ELSE BareStmt
   64 Expr: LP . Expr RP

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38
    RP     shift, and go to state 47

    Expr  go to state 48


state 30

   42 IfStmt: IF Expr . RP Blk
   43       | IF Expr . RP Blk ELSE Blk
   49 Expr: Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . EQ Expr
   52     | Expr . NEQ Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . LEQ Expr
   56     | Expr . GEQ Expr
   57     | Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MUL Expr
   60     | Expr . DIV Expr
   61     | Expr . MOD Expr

    PLUS   shift, and go to state 49
    MINUS  shift, and go to state 50
    MUL    shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53
    EQ     shift, and go to state 54
    NEQ    shift, and go to state 55
    LT     shift, and go to state 56
    GT     shift, and go to state 57
    LEQ    shift, and go to state 58
    GEQ    shift, and go to state 59
    AND    shift, and go to state 60
    OR     shift, and go to state 61
    RP     shift, and go to state 62


state 31

   44 WhlStmt: WHILE LP . Expr RP Blk
   45        | WHILE LP . RP Blk
   46        | WHILE LP . Expr Blk
   47        | WHILE LP . Expr RP BareStmt
   64 Expr: LP . Expr RP

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38
    RP     shift, and go to state 63

    Expr  go to state 64


state 32

   48 WhlStmt: WHILE Expr . RP Blk
   49 Expr: Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . EQ Expr
   52     | Expr . NEQ Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . LEQ Expr
   56     | Expr . GEQ Expr
   57     | Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MUL Expr
   60     | Expr . DIV Expr
   61     | Expr . MOD Expr

    PLUS   shift, and go to state 49
    MINUS  shift, and go to state 50
    MUL    shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53
    EQ     shift, and go to state 54
    NEQ    shift, and go to state 55
    LT     shift, and go to state 56
    GT     shift, and go to state 57
    LEQ    shift, and go to state 58
    GEQ    shift, and go to state 59
    AND    shift, and go to state 60
    OR     shift, and go to state 61
    RP     shift, and go to state 65


state 33

   24 PrntStmt: PRINT LP . Expr RP SEMI
   26         | PRINT LP . Expr SEMI
   27         | PRINT LP . RP SEMI
   28         | PRINT LP . Expr RP error
   64 Expr: LP . Expr RP

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38
    RP     shift, and go to state 66

    Expr  go to state 67


state 34

   25 PrntStmt: PRINT Expr . RP SEMI
   49 Expr: Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . EQ Expr
   52     | Expr . NEQ Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . LEQ Expr
   56     | Expr . GEQ Expr
   57     | Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MUL Expr
   60     | Expr . DIV Expr
   61     | Expr . MOD Expr

    PLUS   shift, and go to state 49
    MINUS  shift, and go to state 50
    MUL    shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53
    EQ     shift, and go to state 54
    NEQ    shift, and go to state 55
    LT     shift, and go to state 56
    GT     shift, and go to state 57
    LEQ    shift, and go to state 58
    GEQ    shift, and go to state 59
    AND    shift, and go to state 60
    OR     shift, and go to state 61
    RP     shift, and go to state 68


state 35

   29 PrntStmt: PRINTF LP . Expr RP SEMI
   31         | PRINTF LP . Expr SEMI
   32         | PRINTF LP . RP SEMI
   33         | PRINTF LP . Expr RP error
   64 Expr: LP . Expr RP

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38
    RP     shift, and go to state 69

    Expr  go to state 70


state 36

   30 PrntStmt: PRINTF Expr . RP SEMI
   49 Expr: Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . EQ Expr
   52     | Expr . NEQ Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . LEQ Expr
   56     | Expr . GEQ Expr
   57     | Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MUL Expr
   60     | Expr . DIV Expr
   61     | Expr . MOD Expr

    PLUS   shift, and go to state 49
    MINUS  shift, and go to state 50
    MUL    shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53
    EQ     shift, and go to state 54
    NEQ    shift, and go to state 55
    LT     shift, and go to state 56
    GT     shift, and go to state 57
    LEQ    shift, and go to state 58
    GEQ    shift, and go to state 59
    AND    shift, and go to state 60
    OR     shift, and go to state 61
    RP     shift, and go to state 71


state 37

   20 Asgn: ID ASGN . Expr SEMI
   21     | ID ASGN . Expr error
   22     | ID ASGN . error SEMI

    error  shift, and go to state 72
    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 73


state 38

   64 Expr: LP . Expr RP

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 74


state 39

   23 Asgn: ID Expr . SEMI
   49 Expr: Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . EQ Expr
   52     | Expr . NEQ Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . LEQ Expr
   56     | Expr . GEQ Expr
   57     | Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MUL Expr
   60     | Expr . DIV Expr
   61     | Expr . MOD Expr

    PLUS   shift, and go to state 49
    MINUS  shift, and go to state 50
    MUL    shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53
    EQ     shift, and go to state 54
    NEQ    shift, and go to state 55
    LT     shift, and go to state 56
    GT     shift, and go to state 57
    LEQ    shift, and go to state 58
    GEQ    shift, and go to state 59
    AND    shift, and go to state 60
    OR     shift, and go to state 61
    SEMI   shift, and go to state 75


state 40

   13 Blk: LC StmtList . RC
   14    | LC StmtList . error

    error  shift, and go to state 76
    RC     shift, and go to state 77


state 41

    0 $accept: Prog $end .

    $default  accept


state 42

    2 StmtList: Stmt StmtList .

    $default  reduce using rule 2 (StmtList)


state 43

   17 Decl: Typ error . SEMI

    SEMI  shift, and go to state 78


state 44

   15 Decl: Typ ID . SEMI
   16     | Typ ID . error

    error  shift, and go to state 79
    SEMI   shift, and go to state 80


state 45

   49 Expr: Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . EQ Expr
   52     | Expr . NEQ Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . LEQ Expr
   56     | Expr . GEQ Expr
   57     | Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MUL Expr
   60     | Expr . DIV Expr
   61     | Expr . MOD Expr
   63     | MINUS Expr .

    $default  reduce using rule 63 (Expr)


state 46

   49 Expr: Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . EQ Expr
   52     | Expr . NEQ Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . LEQ Expr
   56     | Expr . GEQ Expr
   57     | Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MUL Expr
   60     | Expr . DIV Expr
   61     | Expr . MOD Expr
   62     | NOT Expr .

    $default  reduce using rule 62 (Expr)


state 47

   36 IfStmt: IF LP RP . Blk

    LC  shift, and go to state 9

    Blk  go to state 81


state 48

   34 IfStmt: IF LP Expr . RP Blk
   35       | IF LP Expr . RP Blk ELSE Blk
   37       | IF LP Expr . Blk
   38       | IF LP Expr . Blk ELSE Blk
   39       | IF LP Expr . RP BareStmt
   40       | IF LP Expr . RP BareStmt ELSE Blk
   41       | IF LP Expr . RP Blk ELSE BareStmt
   49 Expr: Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . EQ Expr
   52     | Expr . NEQ Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . LEQ Expr
   56     | Expr . GEQ Expr
   57     | Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MUL Expr
   60     | Expr . DIV Expr
   61     | Expr . MOD Expr
   64     | LP Expr . RP

    PLUS   shift, and go to state 49
    MINUS  shift, and go to state 50
    MUL    shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53
    EQ     shift, and go to state 54
    NEQ    shift, and go to state 55
    LT     shift, and go to state 56
    GT     shift, and go to state 57
    LEQ    shift, and go to state 58
    GEQ    shift, and go to state 59
    AND    shift, and go to state 60
    OR     shift, and go to state 61
    RP     shift, and go to state 82
    LC     shift, and go to state 9

    Blk  go to state 83


state 49

   57 Expr: Expr PLUS . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 84


state 50

   58 Expr: Expr MINUS . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 85


state 51

   59 Expr: Expr MUL . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 86


state 52

   60 Expr: Expr DIV . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 87


state 53

   61 Expr: Expr MOD . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 88


state 54

   51 Expr: Expr EQ . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 89


state 55

   52 Expr: Expr NEQ . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 90


state 56

   53 Expr: Expr LT . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 91


state 57

   54 Expr: Expr GT . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 92


state 58

   55 Expr: Expr LEQ . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 93


state 59

   56 Expr: Expr GEQ . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 94


state 60

   50 Expr: Expr AND . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 95


state 61

   49 Expr: Expr OR . Expr

    ID     shift, and go to state 23
    ICON   shift, and go to state 24
    FCON   shift, and go to state 25
    SCON   shift, and go to state 26
    MINUS  shift, and go to state 27
    NOT    shift, and go to state 28
    LP     shift, and go to state 38

    Expr  go to state 96


state 62

   42 IfStmt: IF Expr RP . Blk
   43       | IF Expr RP . Blk ELSE Blk

    LC  shift, and go to state 9

    Blk  go to state 97


state 63

   45 WhlStmt: WHILE LP RP . Blk

    LC  shift, and go to state 9

    Blk  go to state 98


state 64

   44 WhlStmt: WHILE LP Expr . RP Blk
   46        | WHILE LP Expr . Blk
   47        | WHILE LP Expr . RP BareStmt
   49 Expr: Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . EQ Expr
   52     | Expr . NEQ Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . LEQ Expr
   56     | Expr . GEQ Expr
   57     | Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MUL Expr
   60     | Expr . DIV Expr
   61     | Expr . MOD Expr
   64     | LP Expr . RP

    PLUS   shift, and go to state 49
    MINUS  shift, and go to state 50
    MUL    shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53
    EQ     shift, and go to state 54
    NEQ    shift, and go to state 55
    LT     shift, and go to state 56
    GT     shift, and go to state 57
    LEQ    shift, and go to state 58
    GEQ    shift, and go to state 59
    AND    shift, and go to state 60
    OR     shift, and go to state 61
    RP     shift, and go to state 99
    LC     shift, and go to state 9

    Blk  go to state 100


state 65

   48 WhlStmt: WHILE Expr RP . Blk

    LC  shift, and go to state 9

    Blk  go to state 101


state 66

   27 PrntStmt: PRINT LP RP . SEMI

    SEMI  shift, and go to state 102


state 67

   24 PrntStmt: PRINT LP Expr . RP SEMI
   26         | PRINT LP Expr . SEMI
   28         | PRINT LP Expr . RP error
   49 Expr: Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . EQ Expr
   52     | Expr . NEQ Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . LEQ Expr
   56     | Expr . GEQ Expr
   57     | Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MUL Expr
   60     | Expr . DIV Expr
   61     | Expr . MOD Expr
   64     | LP Expr . RP

    PLUS   shift, and go to state 49
    MINUS  shift, and go to state 50
    MUL    shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53
    EQ     shift, and go to state 54
    NEQ    shift, and go to state 55
    LT     shift, and go to state 56
    GT     shift, and go to state 57
    LEQ    shift, and go to state 58
    GEQ    shift, and go to state 59
    AND    shift, and go to state 60
    OR     shift, and go to state 61
    SEMI   shift, and go to state 103
    RP     shift, and go to state 104


state 68

   25 PrntStmt: PRINT Expr RP . SEMI

    SEMI  shift, and go to state 105


state 69

   32 PrntStmt: PRINTF LP RP . SEMI

    SEMI  shift, and go to state 106


state 70

   29 PrntStmt: PRINTF LP Expr . RP SEMI
   31         | PRINTF LP Expr . SEMI
   33         | PRINTF LP Expr . RP error
   49 Expr: Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . EQ Expr
   52     | Expr . NEQ Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . LEQ Expr
   56     | Expr . GEQ Expr
   57     | Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MUL Expr
   60     | Expr . DIV Expr
   61     | Expr . MOD Expr
   64     | LP Expr . RP

    PLUS   shift, and go to state 49
    MINUS  shift, and go to state 50
    MUL    shift, and go to state 51
    DIV    shift, and go to state 52
    MOD    shift, and go to state 53
    EQ     shift, and go to state 54
    NEQ    shift, and go to state 55
    LT     shift, and go to state 56
    GT     shift, and go to state 57
    LEQ    shift, and go to state 58
    GEQ    shift, and go to state 59
    AND    shift, and go to state 60
    OR     shift, and go to state 61
    SEMI   shift, and go to state 107
    RP     shift, and go to state 108


state 71

   30 PrntStmt: PRINTF Expr RP . SEMI

    SEMI  shift, and go to state 109


state 72

   22 Asgn: ID ASGN error . SEMI

    SEMI  shift, and go to state 110


state 73

   20 Asgn: ID ASGN Expr . SEMI
   21     | ID ASGN Expr . error
   49 Expr: Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . EQ Expr
   52     | Expr . NEQ Expr
   53     | Expr . LT Expr
   54     | Expr . GT Expr
   55     | Expr . LEQ Expr
   56     | Expr . GEQ Expr
   57     | Expr . PLUS Expr
   58     | Expr . MINUS Expr
   59     | Expr . MUL Expr
   60     | Expr . DIV Expr
   61     | Expr . MOD Expr
